<resources>
    <string name="app_name">AppPosTablet</string>
    <string name="title">theLOOP KTV</string>

    <string name="menu_room">包廂</string>
    <string name="menu_order">點單</string>
    <string name="menu_checkin">報到</string>
    <string name="menu_deposit">寄存管理</string>
    <string name="menu_accounting">帳務</string>
    <string name="menu_member">會員業務</string>
    <string name="menu_operation">營運管理</string>
    <string name="menu_stock">庫存管理</string>
    <string name="menu_setting">其他設置</string>

    <string name="label_menu">選單</string>
    <string name="label_type_sorting">類型排序</string>
    <string name="label_room_filter">篩選包廂</string>
    <string name="label_current_capacity">包廂使用率</string>
    <string name="label_icon_help">圖標說明</string>
    <string name="label_room_list">列表</string>
    <string name="label_room_map">地圖</string>
    <string name="label_information">基本資訊</string>
    <string name="label_box_owner">代訂人</string>
    <string name="label_box_service">輪房人</string>
    <string name="label_box_customer_type">客戶來源</string>
    <string name="label_customer_name">顧客姓名</string>
    <string name="label_customer_phone">連絡電話</string>
    <string name="label_customer_level">消費等級</string>
    <string name="label_customer_sing_level">歌唱等級</string>
    <string name="label_time">時間</string>
    <string name="label_set">方案</string>
    <string name="label_time_duration_ref">時長</string>
    <string name="label_end_time_ref">結束時間</string>
    <string name="label_time_duration">時長</string>
    <string name="label_min">分鐘</string>
    <string name="label_no_limit">計時</string>
    <string name="label_30_min">30分鐘</string>
    <string name="label_1_hr">1小時</string>
    <string name="label_2_hr">2小時</string>
    <string name="label_3_hr">3小時</string>
    <string name="label_4_hr">4小時</string>
    <string name="label_5_hr">5小時</string>
    <string name="label_6_hr">6小時</string>
    <string name="label_7_hr">7小時</string>
    <string name="label_clean">清除</string>
    <string name="label_accept">確定</string>
    <string name="label_cancel">取消</string>
    <string name="label_reserve_checkin_time">報到時間</string>
    <string name="label_reserve_code">訂位代碼</string>
    <string name="label_reserve_owner">預定人</string>
    <string name="label_reserve_phone">連絡電話</string>
    <string name="label_reserve_time">預定時間</string>
    <string name="label_reserve_person_count">人數</string>
    <string name="label_reserve_ctrl">操作</string>

    <string name="box_control_open">開廂</string>
    <string name="box_control_checkout">結帳</string>
    <string name="box_control_continue">續包</string>
    <string name="box_control_close">關廂</string>
    <string name="box_control_lock">鎖廂</string>
    <string name="box_control_list">消費清單</string>

    <string name="box_status_idle">空閒</string>
    <string name="box_status_using">使用中</string>
    <string name="box_status_cleaning">清潔中</string>
    <string name="box_status_checked">已結帳</string>
    <string name="box_status_maintenance">維修中</string>

    <string name="box_type_0">小包廂</string>
    <string name="box_type_1">中包廂</string>
    <string name="box_type_2">大包廂</string>
</resources>