<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_underline"
    android:divider="@drawable/div_v"
    android:orientation="horizontal"
    android:showDividers="middle">


    <TextView
        android:id="@+id/code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/label_reserve_code"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/label_reserve_owner"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/label_reserve_phone"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/label_reserve_time"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/label_reserve_person_count"
        android:textColor="#ffffff" />

    <ToggleButton
        android:checked="true"
        android:backgroundTint="@color/toggle_item"
        android:id="@+id/ctrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/label_reserve_ctrl"
        android:textColor="#ffffff"
        android:textOff="選擇"
        android:textOn="取消" />
</LinearLayout>