<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_box_scene">

    <LinearLayout
        android:id="@+id/icon_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/deepBlue"
        android:gravity="center_vertical"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="5"
            android:gravity="start|center_vertical"
            android:text="@string/label_icon_help"
            android:textColor="@color/primaryTextColor"
            app:drawableEndCompat="@drawable/ic_help"
            app:drawableTint="@color/primaryTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="5"
            android:gravity="start|center_vertical"
            android:text="@string/box_status_maintenance"
            android:textColor="@color/primaryTextColor"
            app:drawableEndCompat="@drawable/ic_tag"
            app:drawableTint="@color/colorOnFixing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="5"
            android:gravity="start|center_vertical"
            android:text="@string/box_status_cleaning"
            android:textColor="@color/primaryTextColor"
            app:drawableEndCompat="@drawable/ic_tag"
            app:drawableTint="@color/colorOnClean" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="5"
            android:gravity="start|center_vertical"
            android:text="@string/box_status_checked"
            android:textColor="@color/primaryTextColor"
            app:drawableEndCompat="@drawable/ic_tag"
            app:drawableTint="@color/colorOnChecked" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="5"
            android:gravity="start|center_vertical"
            android:text="@string/box_status_using"
            android:textColor="@color/primaryTextColor"
            app:drawableEndCompat="@drawable/ic_tag"
            app:drawableTint="@color/colorOnUsing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="5"
            android:gravity="start|center_vertical"
            android:text="@string/box_status_idle"
            android:textColor="@color/primaryTextColor"
            app:drawableEndCompat="@drawable/ic_tag"
            app:drawableTint="@color/colorOnIdle" />

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/type_spinner"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/primaryTextColor"
            android:dropDownVerticalOffset="48dp"
            android:ems="4"
            android:maxEms="4"
            android:spinnerMode="dropdown" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/floor_spinner"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/primaryTextColor"
            android:dropDownVerticalOffset="48dp"
            android:ems="4"
            android:maxEms="4"
            android:spinnerMode="dropdown" />
    </LinearLayout>


    <fragment
        android:id="@+id/nav_fragment_room"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/controller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_layout"
        app:navGraph="@navigation/nav_room" />

    <fragment
        android:id="@+id/controller"
        android:name="com.aientec.ktv_pos_tablet.fragment.box.ControlFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:tag="control"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/fragment_box_control" />

    <RadioGroup
        android:id="@+id/selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:background="@drawable/room_display_switch"
        android:divider="@drawable/actionbar_divider"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp"
        android:showDividers="middle"
        app:layout_constraintBottom_toTopOf="@id/controller"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rb_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:button="@null"
            android:tag="LIST"
            android:text="@string/label_room_list"
            android:textColor="@color/menu_item"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:button="@null"
            android:tag="MAP"
            android:text="@string/label_room_map"
            android:textColor="@color/menu_item"
            android:textSize="24sp" />
    </RadioGroup>
</androidx.constraintlayout.motion.widget.MotionLayout>