<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/deepBlue">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@drawable/actionbar_divider"
        android:dividerPadding="8dp"
        android:showDividers="middle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center_vertical"
            android:text="@string/box_control_open"
            android:textColor="@color/primaryTextColor"
            android:textSize="28sp"
            app:icon="@drawable/ic_control_add"
            app:iconTint="@color/primaryTextColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center_vertical"
            android:text="@string/box_control_checkout"
            android:textColor="@color/primaryTextColor"
            android:textSize="28sp"
            app:icon="@drawable/ic_control_checkout"
            app:iconTint="@color/primaryTextColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center_vertical"
            android:text="@string/box_control_close"
            android:textColor="@color/primaryTextColor"
            android:textSize="28sp"
            app:icon="@drawable/ic_control_close"
            app:iconTint="@color/primaryTextColor" />
    </LinearLayout>
</HorizontalScrollView>