<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/primaryLightColor"
    android:orientation="vertical"
    tools:layout_width="wrap_content">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RadioGroup
            android:id="@+id/menus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/menu_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:button="@null"
                android:drawableTop="@drawable/ic_menu_room"
                android:drawableTint="@color/menu_item"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/menu_room"
                android:textColor="@color/menu_item"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/menu_reserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:button="@null"
                android:drawableTop="@drawable/ic_menu_order"
                android:drawableTint="@color/menu_item"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/menu_checkin"
                android:textColor="@color/menu_item"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/menu_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:button="@null"
                android:drawableTop="@drawable/ic_menu_order"
                android:drawableTint="@color/menu_item"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/menu_order"
                android:textColor="@color/menu_item"
                android:textSize="24sp"
                android:visibility="gone" />
        </RadioGroup>
    </ScrollView>

    <Button
        android:id="@+id/exit"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"

        android:background="@null"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/ic_exit"
        android:drawableTint="@color/primaryTextColor"
        android:text="離開"
        android:textSize="24sp" />
</LinearLayout>